# eckfp8

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
circuit/: Cargo.toml  README.md
circuit/examples/: prove_verify_signature.rs
circuit/src/: lib.rs  point_ops.rs  poseidon2_hash_air.rs  scalar_arithmetic.rs  scalar_mul_air.rs  schnorr_air.rs  signature_witness.rs
curve/: Cargo.toml  README.md  compute_constants.py
curve/benches/: field_multiplication.rs  group_operations.rs
curve/src/: affine.rs  basefield.rs  curve.rs  generator_table.rs  group.rs  lib.rs  msm.rs  projective.rs  random.rs  scalarfield.rs
schnorr/: Cargo.toml  README.md
schnorr/benches/: signatures.rs
schnorr/examples/: schnorr.rs
schnorr/src/: constants.rs  errors.rs  keys.rs  lib.rs  signatures.rs  tests.rs
