[package]
name = "circuit"
version = "0.1.0"
edition = "2021"

[dependencies]
curve = { path = "../curve" }
schnorr = { path = "../schnorr" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-air = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-poseidon2-air = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git" }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
