[package]
name = "curve"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-field = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git" }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
num-bigint = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9"

[[bench]]
name = "field_multiplication"
harness = false

[[bench]]
name = "group_operations"
harness = false
