[package]
name = "schnorr"
version = "0.1.0"
edition = "2024"

[dependencies]
curve = { path = "../curve" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git" }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "signatures"
harness = false
